# financial-reporting-qa-bot

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: main.yml
src/api/: Dockerfile  build.Dockerfile  pyproject.toml
src/api/.devcontainer/: devcontainer.json
src/api/app/: prompts.py  server.py  server.py.old
src/chat/: Dockerfile  build.Dockerfile  pyproject.toml
src/chat/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  requirements.txt
src/chat/app/: main.py
src/integration/: Dockerfile  pyproject.toml
src/integration/.devcontainer/: devcontainer.json
src/integration/app/: main.py
src/integration/app/prepdocslib/: blobmanager.py  embeddings.py  fileprocessor.py  integratedvectorizestrategy.py  listfilestrategy.py  page.py  parser.py  pdfparser.py  strategy.py  textsplitter.py
