[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Phil Andreoli <phil.andreoli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.31.1"
python-decouple = "^3.8"
msal = "1.27.0"
msal-streamlit-authentication = "^1.0.9"
langserve = {extras = ["all"], version = "^0.0.46"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
