[tool.poetry]
name = "integration"
version = "0.1.0"
description = ""
authors = ["Phil Andreoli <phil.andreoli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.11"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.1"
pdfkit = "^1.0.0"
azure-ai-documentintelligence = "1.0.0b2"
azure-identity = "^1.15.0"
pypdf = "^4.1.0"
azure-search-documents = "11.6.0b1"
azure-storage-blob = "^12.19.1"
pymupdf = "^1.23.26"
tiktoken = "^0.6.0"
openai = "^1.13.3"
pillow = "^10.2.0"
langchain-openai = "^0.0.8"
pytz = "^2024.1"
pymongo = "^4.6.2"
flask = "^3.0.2"
flask-restful = "^0.3.10"
waitress = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
